--- a/newspaper_project/users/templates/users/layout.html
+++ b/newspaper_project/users/templates/users/layout.html
@@ -1,17 +1,17 @@
 {% load static %}
 <!doctype html>
-
 <html lang="en">
+<!-- v1.01 08/27/2020-->
 
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <title>{% block title %} Palm Spring Blog {% endblock %}</title>
+  <title>{% block title %} Teopinillo Newspaper {% endblock %}</title>
   <meta name="Pinillo Newspaper" content="Pinillos Newspapper">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="teopinillo" content="porfolio">
-  <link href="{% static 'blog/styles.css' %}" rel="stylesheet">
+  <link href="{% static 'users/styles.css' %}" rel="stylesheet">
 </head>
 
 <body>
@@ -33,7 +33,7 @@
     <div class="row">
       <div class="col">
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary navbar-fixed-top">
-          <a class="navbar-brand" href="#">Palm Spring Blog</a>
+          <a class="navbar-brand" href="#">Teopinillo Newspaper</a>
           <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
             <spam class="navbar-toggler-icon ">
 
@@ -56,11 +56,20 @@
 
             <ul class="nav navbar-nav navbar-right">
               {% if user.is_authenticated %}
-
               <li class="nav-item">
-                Welcome {{ user.username }}
-                <a class="nav-link" href="{% url 'accounts/logout' %}">
-                  <span class="glyphicon glyphicon-log-out"></span>
+                <a class="nav-link" href="#">
+                  Welcome {{ user.username }}
+                </a>
+              </li>
+
+              <li class="nav-item">               
+                <a class="nav-link" href="{% url 'logout' %}">
+                  <span>                    
+                    <svg  width="24" height="24" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 551.13 551.13">
+                      <path d="m435.616 160.051-24.354 24.354 73.937 73.937h-244.08v34.446h244.08l-73.937 73.937 24.354 24.354 115.514-115.514z"/>
+                      <path d="m378.902 516.685h-344.456v-482.239h344.456v34.446h34.446v-51.669c0-9.52-7.703-17.223-17.223-17.223h-378.902c-9.52 0-17.223 7.703-17.223 17.223v516.684c0 9.52 7.703 17.223 17.223 17.223h378.902c9.52 0 17.223-7.703 17.223-17.223v-51.668h-34.446z"/>
+                    </svg>
+                  </span> 
                   Log Out
                 </a>
               </li>
